# ArenaGame

./: .gitignore  CMakeLists.txt  README.md
src/include/: GUI.h  audioManager.h  camera.h  config.h  gameEngine.h  gameState.h  inputHandler.h  interactionSystem.h  inventory.h  items.h  mesh.h  model.h  renderer.h  shader.h
src/main/: GUI.cpp  config.cpp  gameEngine.cpp  gameState.cpp  inputHandler.cpp  interactionSystem.cpp  inventory.cpp  main.cpp  model.cpp  renderer.cpp
src/models/bonfire/: bonfire.mtl
src/models/bonfireSword/: bonfire.mtl
src/models/brokenSword/: broken_sword.mtl
src/models/level/: level.mtl
src/models/lightBeam/: lightBeam.mtl
src/models/sword/: sword.mtl
src/shaders/: levelFs.glsl  swordFs.glsl
src/shaders/bonfire/: bonfireFs.glsl
src/shaders/level/: levelFs.glsl
src/shaders/sword/: swordFs.glsl
